--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="me"></div>
     <h3>David Manuel</h3>
     <p>
-      My Name is David Manuel. I'm a 16 year old student and I have programming experience in html, css, and javascript, python, C++, and lua. I currently study at Minuteman Vocational High School.
+      My Name is David Manuel. I'm a 16 year old student at Minuteman Vocational High School.
     </p>
   </div>
 </section>
