fixed hero image and buffers

--- a/index.html
+++ b/index.html
@@ -23,23 +23,23 @@
     </header>
 
 <section class="parallax-container">
-  <h1>Who is David Manuel <i>really</i></h1>
+  <h1 class = "name">David Manuel's Portfolio</h1>
 
 </section>
 
-<section class="buffer"></section>
+<p> </p>
 
 <section class="parallax-container parallax-container2">
   <div class="card">
     <div id="me"></div>
     <h3>David Manuel</h3>
     <p>
-      My Name is David Manuel. I'm a 16 year old student at Minuteman Vocational High School.
+      My Name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. 
     </p>
   </div>
 </section>
-  <section class="buffer"></section>
 
+<p> </p>
 
 <section class="parallax-container parallax-container2">
   <div class="card">
@@ -79,6 +79,7 @@
     </p>
 
     <button><a target = "_blank" href = "https://replit.com/@ace521/BlackJack-practice">Link to Project(s)</a></button>
+    <button style = "margin-top: 1rem;"><a target = "_blank" href = "IDE/IDE.html">IDE</a></button>
   </div>
   
 
