added View Code button and fixed issues

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div>
             <button><a href="index.html">Home</a></button> 
         </div>
+        <div>
+          <button><a target = "_blank" href = "https://docs.google.com/document/d/1zbwR9RV_vEVydwtblo-MRMlXfkb9ix3I/edit?usp=sharing&ouid=107164145780714357337&rtpof=true&sd=true">Resume</a></button>
+        </div>
+        <div>
+          <button><a target = "_blank" href = "https://www.linkedin.com/in/david-manuel-4410552a6/">Linkedin</a></button>
+        </div>
       </nav>
     </header>
 
@@ -34,7 +40,7 @@
     <div id="me"></div>
     <h3>David Manuel</h3>
     <p>
-      My Name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. 
+      My Name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. I have gained experience in HTML, CSS, Javascript (including WebGL and jQuery), Python, Lua, C++,and Java.
     </p>
   </div>
 </section>
@@ -44,42 +50,44 @@
 <section class="parallax-container parallax-container2">
   <div class="card">
     <div class="card-img"></div>
-    <h3>Minuteman</h3>
+    <h3>Equaleyes</h3>
     <p>
-    Minuteman is a vocational school, meaning that I get to spend half of my time studyingin a carrer program rather than academics.
+    This is a project, named "EqualEyes", I and a partner made as a disability visualizer.
     </p>
-    <button><a href = "https://minuteman.org">Link To School Website</a></button>
+    <button><a href = "https://github.com/dacer521/disabilityVisualizer">Link To Github</a></button>
+    <button style = "margin-top: 1rem;" "><a target = "_blank" href = "https://equaleyes.neocities.org/">Link To Website</a></button>
 
   </div>
   <div class="card">
     <div class="card-img"></div>
-    <h3>Task Manager</h3>
+    <h3>Connect Four</h3>
     <p>
-      As one of my quarterly projects, I made a C++ basic task manager. It features basic functions, error handling and file handling.
+      This is a connect four game I made as a submission AP Computer Science Principles test.
     </p>
-    <button><a href = "https://replit.com/@ace521/task-manager#main.cpp">Link To Project</a></button>
+    <button><a href = "https://github.com/dacer521/connectFour/blob/main/connectFour.py">Link To Github</a></button>
+    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?lang=python&project=connectfour">View Code</a></button>
 
   </div>
 
 
-  <div class="card">
+  <div class="card">   
     <div class="card-img"></div>
-    <h3>MockWorld Website</h3>
+    <h3>Flask Weather App</h3>
     <p>
-      Me and some friends made a website for a game we play called 'MockWorld'. The game is currently not running, but the website is able to be used.
+      To gain experience with back-end development and Flask, I created a basic weather app.
     </p>
-    <button><a href = "mockworld.neocities.org">Link To Website</a></button>
+    <button><a href = "https://github.com/dacer521/flaskWeatherApp">Link To Github</a></button>
 
   </div>
   <div class="card">
     <div class="card-img"></div>
     <h3>BlackJack</h3>
     <p>
-      I made a basic program in Python and Lua that feature a text based BlackJack. 
+      To practice using python more I made a blackjack game.
     </p>
 
-    <button><a target = "_blank" href = "https://replit.com/@ace521/BlackJack-practice">Link to Project(s)</a></button>
-    <button style = "margin-top: 1rem;"><a target = "_blank" href = "IDE/IDE.html">IDE</a></button>
+    <button><a target = "_blank" href = "https://github.com/dacer521/BlackJack">Link to Github</a></button>
+    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?lang=python&project=blackjack">View code</a></button> 
   </div>
   
 
@@ -89,7 +97,7 @@
 <section class="buffer"></section>
 
 
-<footer>Alleged copyright David Manuel 2024 via WPI. No rights reserved</footer>
+
 
   </body>
 
