--- a/IDE/IDE.html
+++ b/IDE/IDE.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Home</title>
-    <script src = "main.js"></script>
-    <link rel = "stylesheet" href = "style.css">
+    <title>IDE</title>
+    <script src = "IDE.js"></script>
+    <link rel = "stylesheet" href = "IDE.css">
+    <link rel = "stylesheet" href = "../styles.css">
+    <script src="https://unpkg.com/@stackblitz/sdk/bundles/sdk.umd.js"></script>
 
-    <link rel="icon" type="image/x-icon" href = "images/logo.png">
+    <link rel="icon" type="image/x-icon" href = "../images/logo.png">
     
   </head>
 
@@ -17,14 +19,28 @@
             <img src="../images/logo.png" class="logo" alt="Logo">
         </div>
         <div>
-            <button><a href="index.html">Home</a></button> 
+            <button><a href="../index.html">Home</a></button> 
+        </div>
+        <div>
+          <button><a target = "_blank" href= "https://docs.google.com/document/d/1zbwR9RV_vEVydwtblo-MRMlXfkb9ix3I/edit?usp=sharing&ouid=107164145780714357337&rtpof=true&sd=true">Resume</a></button>
+        </div>
+        <div>
+          <button><a target = "_blank" href = "https://www.linkedin.com/in/david-manuel-4410552a6/">Linkedin</a></button>
         </div>
       </nav>
     </header>
     
-    <iframe id = "IDE" src="https://stackblitz.com/edit/js?embed=1&file=index.js" width="100%" height="500px"></iframe>
 
-<footer>Alleged copyright David Manuel 2024 via WPI. No rights reserved</footer>
+
+    <!-- <div id = "IDE-container"> -->
+
+      <iframe id = "frame" src = "" width="1200" height="800"></iframe>  
+
+
+    <!-- </div> -->
+
+
+
 
   </body>
 
