--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="me"></div>
     <h3>David Manuel</h3>
     <p>
-      My Name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. I have gained experience in HTML, CSS, Javascript (including WebGL and jQuery), Python, Lua, C++,and Java.
+      My name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. I have experience in HTML, CSS, Javascript (including WebGL and jQuery), Python, Lua, C++,and Java.
     </p>
   </div>
 </section>
@@ -52,7 +52,7 @@
     <div class="card-img"></div>
     <h3>Equaleyes</h3>
     <p>
-    This is a project, named "EqualEyes", I and a partner made as a disability visualizer.
+    For an app competition I collaborated with a partner to make "Equaleyes"-a disability visualizer.
     </p>
     <button><a href = "https://github.com/dacer521/disabilityVisualizer">Link To Github</a></button>
     <button style = "margin-top: 1rem;" "><a target = "_blank" href = "https://equaleyes.neocities.org/">Link To Website</a></button>
@@ -62,10 +62,10 @@
     <div class="card-img"></div>
     <h3>Connect Four</h3>
     <p>
-      This is a connect four game I made as a submission AP Computer Science Principles test.
+      This is a text-based connect four game I made as a submission AP Computer Science Principles test.
     </p>
     <button><a href = "https://github.com/dacer521/connectFour/blob/main/connectFour.py">Link To Github</a></button>
-    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?lang=python&project=connectfour">View Code</a></button>
+    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?project=connectfour">View Code</a></button>
 
   </div>
 
@@ -74,7 +74,7 @@
     <div class="card-img"></div>
     <h3>Flask Weather App</h3>
     <p>
-      To gain experience with back-end development and Flask, I created a basic weather app.
+      To further my back-end knowledge, I created a python weather app utilizing flask.
     </p>
     <button><a href = "https://github.com/dacer521/flaskWeatherApp">Link To Github</a></button>
 
@@ -83,11 +83,11 @@
     <div class="card-img"></div>
     <h3>BlackJack</h3>
     <p>
-      To practice using python more I made a blackjack game.
+      Further enhancing my skills in Object oriented programming, I created a text-based blackjack game in python.
     </p>
 
     <button><a target = "_blank" href = "https://github.com/dacer521/BlackJack">Link to Github</a></button>
-    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?lang=python&project=blackjack">View code</a></button> 
+    <button style = "margin-top: 1rem;"><a href = "IDE/IDE.html?project=blackjack">View code</a></button> 
   </div>
   
 
