--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
 <section class="parallax-container">
-  <h1 class = "name">David Manuel's Portfolio</h1>
+  <h1 id = "myname" class = "name">David Manuel's Portfolio</h1>
 
 </section>
 
