--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="me"></div>
     <h3>David Manuel</h3>
     <p>
-      My name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. I have experience in HTML, CSS, Javascript (including WebGL and jQuery), Python, Lua, C++,and Java.
+      My name is David Manuel. I'm a 16 year old programming student at Minuteman Vocational High School. I have experience in HTML, CSS, Javascript (including WebGL, jQuery, react.js, and node.js), Python, Lua, C++,and Java.
     </p>
   </div>
 </section>
